# harbor-hf

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  slophammer-baseline.json  slophammer.yml  ty.toml
docs/: 2026-07-15-results-viewer-plan.md  api-v1.openapi.json  architecture.md  deployment-profiling.md  endpoint-provisioning.md  harbor-cookbook.md  harbor-integration-contract.md  harbor-integration-refactor.md  harbor-native-result-publication.md  implementation-plan.md  provider-evidence-recorder-plan.md  result-field-ownership.md  result-publication.md  results-viewer-release.md  run-spec.md  trial-evidence-bundle.md  trial-evidence-implementation-plan.md
examples/: serving-profile.json  shellbench-public-six-run.yaml  shellbench.yaml
schemas/: harbor-native-bundle-v1alpha1.schema.json  judge-exchange-v1.schema.json  judge-recorder-summary-v1.schema.json  judge-selection-v1.schema.json  publication-envelope-v1.schema.json  publication-envelope-v2.schema.json  result-catalog-v1.schema.json  result-catalog-v2.schema.json  result-projection-v1.schema.json  result-projection-v2.schema.json  serving-profile-v1.schema.json  trial-evidence-v1.schema.json  workspace-file-v1.schema.json
scripts/: build_space_release.py  check_mutation.py  export_openapi.py  export_publication_schemas.py  rebuild_result_catalog.py
space/: README.md  app.py  requirements.txt
tests/: conftest.py  test_automation.py  test_bucket_evidence.py  test_campaign_apply.py  test_campaign_apply_mutation_contracts.py  test_campaign_reconciler_mutation_contracts.py  test_cli.py  (+49 more)
(+80 files in other folders)
